--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,49 @@
       <div class="text-center">
         <h1 class="display-4">Welcome to My Node.js App</h1>
         <p class="lead">This is the root page.</p>
-        <a href="https://www.google.com" class="btn btn-primary">Google</a>
+        <div class="list-group">
+          <a
+            href="https://api-sync.vercel.app/api/cricket/live-scores"
+            class="list-group-item list-group-item-action"
+            target="_blank"
+            >Get Live Scores</a
+          >
+          <a
+            href="https://api-sync.vercel.app/api/cricket/recent-scores"
+            class="list-group-item list-group-item-action"
+            target="_blank"
+            >Get Recent Scores</a
+          >
+          <a
+            href="https://api-sync.vercel.app/api/cricket/upcoming-matches"
+            class="list-group-item list-group-item-action"
+            target="_blank"
+            >Get Upcoming Matches</a
+          >
+          <a
+            href="https://api-sync.vercel.app/api/cricket/schedule"
+            class="list-group-item list-group-item-action"
+            target="_blank"
+            >Get Match Schedule</a
+          >
+        </div>
+        <p class="mt-4">
+          Visit me here for more details:
+          <a
+            href="https://vaibhav.vercel.app/"
+            class="btn btn-info"
+            target="_blank"
+            >Vaibhav's Site</a
+          >
+        </p>
       </div>
+      <!-- <div class="text-center mt-5">
+        <h2>Terms and Conditions</h2>
+        <p class="text-muted">
+          Use of this API is subject to the following terms and conditions. By
+          accessing and using this API, you agree to be bound by these terms.
+        </p>
+      </div> -->
     </div>
 
     <script
