--- a/public/client.html
+++ b/public/client.html
@@ -6,6 +6,6 @@
     <title>WebSocket Client</title>
   </head>
   <body>
-    <script src="client.js"></script>
+    <script src="wsclient.js"></script>
   </body>
 </html>
